force-app/main/default/objects/DK__c/DK__c.object-meta.xml
<CustomObject>
    <label>Produto</label>
    <nameField>
        <label>Código do Produto</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Produtos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>