force-app/main/default/objects/DK__c/fields/altura__c.field-meta.xml
<CustomField>
    <fullName>altura__c</fullName>
    <description>Altura do produto.</description>
    <label>Altura</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>