force-app/main/default/objects/DK__c/fields/categoria__c.field-meta.xml
<CustomField>
    <fullName>categoria__c</fullName>
    <description>Categoria do produto</description>
    <label>Categoria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>