force-app/main/default/objects/DK__c/fields/classe__c.field-meta.xml
<CustomField>
    <fullName>classe__c</fullName>
    <description>Classe do produto</description>
    <label>Classe</label>
    <length>100</length>
    <type>Text</type>
</CustomField>