force-app/main/default/objects/DK__c/fields/codigo__c.field-meta.xml
<CustomField>
    <fullName>codigo__c</fullName>
    <description>Código do produto.</description>
    <label>Código</label>
    <length>20</length>
    <type>Text</type>
</CustomField>