force-app/main/default/objects/DK__c/fields/codigoBarras__c.field-meta.xml
<CustomField>
    <fullName>codigoBarras__c</fullName>
    <description>Código de barras do produto.</description>
    <label>Código de Barras</label>
    <length>255</length>
    <type>Text</type>
</CustomField>