force-app/main/default/objects/DK__c/fields/codigoFornecedor__c.field-meta.xml
<CustomField>
    <fullName>codigoFornecedor__c</fullName>
    <description>Código do fornecedor do dk</description>
    <label>Código do fornecedor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>