force-app/main/default/objects/DK__c/fields/codigoPai__c.field-meta.xml
<CustomField>
    <fullName>codigoPai__c</fullName>
    <description>Código do pai do produto.</description>
    <label>Código do pai</label>
    <length>20</length>
    <type>Text</type>
</CustomField>