force-app/main/default/objects/DK__c/fields/comprimento__c.field-meta.xml
<CustomField>
    <fullName>comprimento__c</fullName>
    <description>Comprimento do produto</description>
    <label>Comprimento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>