force-app/main/default/objects/DK__c/fields/custoBruto__c.field-meta.xml
<CustomField>
    <fullName>custoBruto__c</fullName>
    <description>Custo bruto do produto.</description>
    <label>Custo Bruto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>