force-app/main/default/objects/DK__c/fields/custoLiquido__c.field-meta.xml
<CustomField>
    <fullName>custoLiquido__c</fullName>
    <description>Custo líquido do produto</description>
    <label>Custo Líquido</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>