force-app/main/default/objects/DK__c/fields/giro__c.field-meta.xml
<CustomField>
    <fullName>giro__c</fullName>
    <description>Giro do produto</description>
    <label>Giro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>