force-app/main/default/objects/DK__c/fields/grupo__c.field-meta.xml
<CustomField>
    <fullName>grupo__c</fullName>
    <description>Grupo do produto</description>
    <label>Grupo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>