force-app/main/default/objects/DK__c/fields/largura__c.field-meta.xml
<CustomField>
    <fullName>largura__c</fullName>
    <description>Largura do produto.</description>
    <label>Largura</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>