force-app/main/default/objects/DK__c/fields/marca__c.field-meta.xml
<CustomField>
    <fullName>marca__c</fullName>
    <description>Marca do produto</description>
    <label>Marca</label>
    <length>255</length>
    <type>Text</type>
</CustomField>