force-app/main/default/objects/DK__c/fields/nome__c.field-meta.xml
<CustomField>
    <fullName>nome__c</fullName>
    <description>Nome do produto</description>
    <label>Nome</label>
    <length>255</length>
    <type>Text</type>
</CustomField>