force-app/main/default/objects/DK__c/fields/nomePai__c.field-meta.xml
<CustomField>
    <fullName>nomePai__c</fullName>
    <label>Nome do pai</label>
    <length>255</length>
    <type>Text</type>
</CustomField>