force-app/main/default/objects/DK__c/fields/peso__c.field-meta.xml
<CustomField>
    <fullName>peso__c</fullName>
    <description>Peso do produto</description>
    <label>Peso</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>