force-app/main/default/objects/DK__c/fields/volume__c.field-meta.xml
<CustomField>
    <fullName>volume__c</fullName>
    <description>Volume ocupado pelo produto.</description>
    <label>Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>